--- a/.babelrc
+++ b/.babelrc
@@ -1,4 +1,4 @@
 {
     "presets": ["env", "stage-0", "react"],
-    "plugins": ["transform-class-properties"]
+    "plugins": ["react-hot-loader/babel", "transform-class-properties"]
 }
