--- a/package.json
+++ b/package.json
@@ -1,31 +1,42 @@
 {
-    "name": "w7d1",
+    "name": "mern-boilerplate",
     "version": "1.0.0",
-    "description": "",
+    "description": "Easy to use, mern boilerplate. Ready to deploy to heroku, no further configuration required.",
     "main": "index.js",
     "scripts": {
-        "dev:app": "parcel src/app/index.html",
-        "dev:server": "nodemon src/server/index.js",
-        "dev": "concurrently \"npm run dev:app\" \"npm run dev:server\"",
-        "build": "parcel build src/app/index.html --out-dir src/server/public",
-        "start": "node src/server/index.js"
+        "dev:app": "parcel watch src/app/index.html",
+        "dev:server": "nodemon --watch src/server src/server/index.js",
+        "dev": "concurrently -n app,server -c green,blue \"npm run dev:app\" \"npm run dev:server\"",
+        "build": "parcel build src/app/index.html --out-dir src/server/public/app --public-url /app",
+        "start": "NODE_ENV=production node src/server/index.js",
+        "heroku-postbuild": "npm run build"
     },
-    "author": "",
+    "author": "Lukas Gisder-Dubé",
     "license": "ISC",
     "dependencies": {
         "axios": "^0.18.0",
+        "bcrypt": "^3.0.0",
         "body-parser": "^1.18.3",
+        "chalk": "^2.4.1",
+        "cloudinary": "^1.11.0",
         "compression": "^1.7.3",
+        "css-layout": "^1.1.1",
         "express": "^4.16.3",
+        "express-fileupload": "^0.4.0",
         "helmet": "^3.13.0",
+        "jsonwebtoken": "^8.3.0",
+        "jwt-decode": "^2.2.0",
         "moment": "^2.22.2",
         "mongoose": "^5.2.14",
         "morgan": "^1.9.1",
+        "podio-js": "^1.6.1",
         "react": "^16.5.2",
-        "react-dom": "^16.5.0",
-        "react-gantt-timeline": "^0.3.2",
+        "react-dom": "^16.5.2",
+        "react-gantt-timeline": "^0.3.4",
+        "react-router": "^4.3.1",
         "react-router-dom": "^4.3.1",
-        "react-sizeme": "^2.5.2"
+        "react-sizeme": "^2.5.2",
+        "temp": "^0.8.3"
     },
     "devDependencies": {
         "babel-core": "^6.26.3",
@@ -35,6 +46,8 @@
         "babel-preset-stage-0": "^6.24.1",
         "concurrently": "^4.0.1",
         "cssnano": "^4.1.0",
-        "node-sass": "^4.9.3"
+        "node-sass": "^4.9.3",
+        "parcel-bundler": "^1.9.7",
+        "react-hot-loader": "^4.3.7"
     }
 }
