--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
         "chalk": "^2.4.1",
         "cloudinary": "^1.11.0",
         "compression": "^1.7.3",
+        "cookie-parser": "^1.4.3",
         "css-layout": "^1.1.1",
         "express": "^4.16.3",
         "express-fileupload": "^0.4.0",
