--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
         "compression": "^1.7.3",
         "cookie-parser": "^1.4.3",
         "css-layout": "^1.1.1",
+        "dhtmlx-gantt": "^5.2.0",
         "express": "^4.16.3",
         "express-fileupload": "^0.4.0",
         "helmet": "^3.13.0",
